upload/style/Oxygen/Oxygen.css
/* ... */
	
.brd samp, .brd code, .brd pre, .brd option, .brd optgroup,
.brd input, .brd select, .brd textarea, .brd td, .brd th {
	font-family: Verdana,Helvetica,Arial,sans-serif; 
	font-size: 1em;
	font-style: normal;
	font-weight: normal;
	}
	
.brd code, .codebox pre, #brd-debug table .tcl, #brd-debug table .tcr {
	font-family: Consolas, courier, "lucida console", monospace;
	}

/* Float Clearing
-------------------------------------------------------------*/
	
#brd-main {position: relative}	
	
.brd-page:after,
#brd-main:after,
.brd .gen-content:after,
.brd .ct-box:after,
#brd-index .item-head:after,
#brd-index .main-item:after,
#brd-index ul.item-info:after,
.brd .frm-group:after,
.brd .mf-set:after,
.brd .sf-set:after,
.brd .mf-box:after,
.brd .sf-box:after,
.brd .mf-item:after,
.brd .txt-set:after,
.brd .txt-box:after,
.brd .frm-form label:after,
.brd fieldset:after,
.brd span.fld-input:after,
.brd .posthead:after,
.brd .postbody:after,
.brd .postfoot .post-options:after {
	content: "";
	display: block;
	font-size: 0;
	height: 0;
	line-height: 0.0;
	overflow:hidden;
	visibility: hidden;
 	clear: both;
	}

/* Hidden items
-------------------------------------------------------------*/

#brd-stats .hn,
#qjump label,
.brd .post .post-byline span,
.brd .post .posthead .post-link span,
.admin .main-subhead,
.brd .main-item .item-info li span.label,
.brd .main-item .item-info li label,
.brd .main-item .you-posted,
.brd .main-item .item-num,
#brd-index .item-summary .subject-title,
.brd .group-legend,
.brd .group-legend span,
.brd .sf-set legend,
.brd .sf-set legend span,
.brd .main-pagehead .page-info,
.brd p.item-select label,
.brd .mf-extra .mf-field label,
.brd .mf-extra .mf-field .aslabel,
.brd .item-subject .item-nav .pages,
.brd .post-options a span,
.brd .main-options .hn,
.brd .main-head .hn small,
.brd .entry-title,
.brd .menu-page .main-head,
.brd .admin-page .main-head {
 	font-size: 0;
 	left: -999em;
 	text-indent: -999em;
 	position:absolute;
 	line-height: 0em;
 	visibility: hidden;
 	}


/*************************************************************
B - GLOBAL STYLES
**************************************************************/

/* General Layout
-------------------------------------------------------------*/

.brd {
	padding: 20px 30px;
	}

#brd-redirect, #brd-maint, #brd-util {
	margin: 50px auto 12px auto;
	width: 60%;
	}
	
.brd-page { /* Confines clearing behaviour within forum wrapper */
	float: left;
	width: 100%;
	position: relative;
	}

.brd .main-content, .brd .gen-content {
	border-style: solid;
	border-width: 1px;
	}

.brd .gen-content {
	padding: 0 1.5em;
	}
	
#brd-index #brd-about, #brd-index #brd-stats {
	margin-top: 1em;
	}
	
#brd-visit, #brd-qpost {
	margin-bottom: 1em;
	}
	

/* Content Text (Default spacing for paragraphs and lists)
-------------------------------------------------------------*/

.brd p, .brd .hn {
	padding: 0.5em 0;
	}
	
.brd  ul, .brd ol {
	padding: 0.5em 0 0.5em 2em;
	}

.brd ul.spaced {
	padding: 0.25em 0 0.25em 2em;
	}
	
.brd ul.spaced li {
	padding: 0.25em 0;
	}


/* Headings
-------------------------------------------------------------*/

.brd th {
	font-size: 1.084em;
	padding: 0.462em 1.417em;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	}
	
.brd .main-head {
	border-style: solid;
	border-width: 1px;
	padding: 0 1.417em;
	}

.brd .main-head .hn {
	font-size: 1.084em;
	padding: 0.462em 10em 0.426em 0;
	}

.brd .main-subhead {
	border-style: solid;
	border-width: 1px;
	position: relative;
	margin-bottom: -1px;
	}
	
.brd .main-subhead .hn {
	font-size: 1.084em;
	padding: 0.462em 1.417em;
	position: relative;
	}

.brd .main-pagehead {
	float: right;
	padding: 0  1.5em;
	border-style: none;
	border-width: 1px;
	margin-top: -2.5em;
	}
	
.brd .main-pagehead .hn {
	padding: 0.5em 0;
	}
	
.brd .content-head {
	border-style: solid none;
	border-width: 1px 0 2px 0;
	margin-top: -1px;
	}

.brd .content-head .hn {
	font-size: 1.084em;
	border-style: none none solid none;
	border-width: 1px;
	padding: 0.462em 1.417em;
	}
	
/*************************************************************
C - COMMON CONTENT TYPES (RE-USABLE FORMATS)
**************************************************************/

/* Option lists
-------------------------------------------------------------*/

.brd .options span {
	border-left-style: solid;
	border-left-width: 1px;
	padding: 0 0 0 0.5em;
	margin: 0 0 0 0.25em;
	}
	
.brd .options span.item1 {
	border-left: 0;
	padding-left: 0;
	margin-left: 0;
	}

/* Content Containers
-------------------------------------------------------------*/
	
.brd .ct-box {
	border-style: solid;
	border-width: 1px;
	margin: 1.417em;
	padding: 0 1em;
	position: relative;
	}

.brd .ct-set {
	border-style: solid;
	border-width: 1px;
	margin: 1.417em;
	padding: 0 0 0 18em;
	position: relative;
	}
	
.brd .ct-group {
	border-style: solid;
	border-width: 1px;
	margin: 1.417em;
	}
	
.brd .ct-group .ct-set, .frm-group .ct-set {
	border-style: dashed none none none;
	margin: 0;
	}
	
.brd .ct-group .ct-box, .brd .frm-group .ct-box {
	border-style: none;
	margin: 0;
	}
	
.brd .ct-group .ct-set .ct-box, .brd .ct-set .ct-box,
.brd .frm-group .ct-set .ct-box {
	border-style: none none none dashed;
	margin: 0;
	}


.brd .ct-group .set1 {
	border-top: 0;
	}

.brd .ct-group .set1 {
	border-top: 0;
	}

.brd .ct-set .ct-legend {
	float: left;
	margin-left: -18em;
	width: 18em;
	display: inline;
	position: relative;
	}
	
.brd .ct-set ul {
	padding-left: 0;
	list-style: none;
	}
	
.brd .ct-box div {
	padding: 0.5em 0;
	}
	
.brd .user-box {
	border-style: solid;
	border-width: 1px;
	margin: 1.417em;
	padding: 0.5em 1em;
	}

#brd-announcement .user-box {
	border: 0;
	margin: 0;
	padding: 0;
	}
	
	
 /* User Identity
-------------------------------------------------------------*/
	
.brd .user-ident {
	padding-left: 0;
	list-style: none;
	}

.brd .user-ident .username a,
.brd .user-ident .username strong {
	font-size: 1.167em;
	font-weight: bold;
	}
/* ... */

